--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,12 +35,12 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         <a class="btn zoombtn" href="{{ site.url }}/assets/cv.pdf">
+                         CV
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                        <!-- <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a>
+                         </a> -->
                  </h3>
             </div>
         </div>
